repo wiki update 251030

--- a/.qoder/repowiki/zh/content/脚本系统/脚本系统.md
+++ b/.qoder/repowiki/zh/content/脚本系统/脚本系统.md
@@ -16,7 +16,18 @@
 - [specify.md](file://templates/commands/specify.md)
 - [plan.md](file://templates/commands/plan.md)
 - [tasks.md](file://templates/commands/tasks.md)
+- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh) - *新增对Qwen Code和opencode代理的支持*
+- [update-agent-context.ps1](file://scripts/powershell/update-agent-context.ps1) - *新增对Qwen Code和opencode代理的支持*
+- [agent-file-template.md](file://templates/agent-file-template.md) - *代理文件模板*
+- [AGENTS.md](file://AGENTS.md) - *代理支持文档*
 </cite>
+
+## 更新摘要
+**变更内容**  
+- 在 `update-agent-context.sh` 和 `update-agent-context.ps1` 脚本中添加了对 Qwen Code 和 opencode 代理的支持
+- 更新了相关脚本的文件路径和处理逻辑
+- 在文档中新增了对这两个代理的详细说明
+- 更新了核心组件和架构概述部分以反映新增功能
 
 ## 目录
 1. [引言](#引言)
@@ -53,30 +64,37 @@ PowerShell --> CommonPS[common.ps1]
 Bash --> CreateFeature[create-new-feature.sh]
 Bash --> SetupPlan[setup-plan.sh]
 Bash --> CheckPrereq[check-prerequisites.sh]
+Bash --> UpdateAgent[update-agent-context.sh]
 PowerShell --> CreateFeaturePS[create-new-feature.ps1]
 PowerShell --> SetupPlanPS[setup-plan.ps1]
 PowerShell --> CheckPrereqPS[check-prerequisites.ps1]
+PowerShell --> UpdateAgentPS[update-agent-context.ps1]
 Templates --> SpecTemplate[spec-template.md]
 Templates --> PlanTemplate[plan-template.md]
 Templates --> TasksTemplate[tasks-template.md]
+Templates --> AgentTemplate[agent-file-template.md]
 Commands --> SpecifyCmd[specify.md]
 Commands --> PlanCmd[plan.md]
 Commands --> TasksCmd[tasks.md]
 CreateFeature --> Templates
 SetupPlan --> Templates
 CheckPrereq --> Templates
+UpdateAgent --> Templates
 CreateFeaturePS --> Templates
 SetupPlanPS --> Templates
 CheckPrereqPS --> Templates
+UpdateAgentPS --> Templates
 ```
 
 **图示来源**
 - [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
 - [setup-plan.sh](file://scripts/bash/setup-plan.sh)
 - [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh)
+- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
 - [spec-template.md](file://templates/spec-template.md)
 - [plan-template.md](file://templates/plan-template.md)
 - [tasks-template.md](file://templates/tasks-template.md)
+- [agent-file-template.md](file://templates/agent-file-template.md)
 
 **本节来源**
 - [scripts/bash](file://scripts/bash)
@@ -86,11 +104,14 @@ CheckPrereqPS --> Templates
 ## 核心组件
 Spec-Kit脚本系统的核心组件包括三个主要脚本：`create-new-feature`用于创建新功能分支并生成规范文件，`setup-plan`用于设置技术实现计划，`check-prerequisites`用于验证环境依赖。这些脚本通过调用公共函数库`common.sh`或`common.ps1`来获取项目路径和分支信息，确保了跨脚本的一致性。每个脚本都支持JSON输出模式，便于与其他工具集成。脚本系统与模板文件紧密协作，通过复制模板并填充实际内容来生成标准化的文档，从而实现了开发流程的自动化。
 
+此外，系统还包含`update-agent-context`脚本，该脚本用于更新AI代理上下文文件，支持包括Qwen Code和opencode在内的多种AI代理。此脚本能够解析`plan.md`文件中的项目元数据，并相应地更新代理配置文件。
+
 **本节来源**
 - [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L98)
 - [setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L61)
 - [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L166)
 - [common.sh](file://scripts/bash/common.sh#L1-L114)
+- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh#L1-L773) - *新增对Qwen Code和opencode代理的支持*
 
 ## 架构概述
 Spec-Kit脚本系统的架构设计体现了模块化和跨平台兼容性的原则。系统采用双栈设计，分别为Bash和PowerShell提供了功能对等的脚本实现。核心功能被抽象为公共函数库，避免了代码重复。脚本通过环境变量`SPECIFY_FEATURE`来跟踪当前处理的功能分支，确保了上下文的一致性。整个系统与模板文件和CLI工具形成了完整的自动化工作流，从功能创建到计划设置再到依赖验证，每个环节都通过脚本自动化完成。
@@ -112,21 +133,25 @@ subgraph "Bash脚本"
 BashCreate[create-new-feature.sh]
 BashSetup[setup-plan.sh]
 BashCheck[check-prerequisites.sh]
+BashUpdate[update-agent-context.sh]
 end
 subgraph "PowerShell脚本"
 PS1Create[create-new-feature.ps1]
 PS1Setup[setup-plan.ps1]
 PS1Check[check-prerequisites.ps1]
+PS1Update[update-agent-context.ps1]
 end
 BashCreate --> OutputSpec[specs/###-feature/spec.md]
 BashSetup --> OutputPlan[specs/###-feature/plan.md]
 BashCheck --> Validation[验证结果]
+BashUpdate --> AgentContext[QWEN.md, AGENTS.md]
 ```
 
 **图示来源**
 - [create-new-feature.sh](file://scripts/bash/create-new-feature.sh)
 - [setup-plan.sh](file://scripts/bash/setup-plan.sh)
 - [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh)
+- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh)
 - [common.sh](file://scripts/bash/common.sh)
 
 ## 详细组件分析
@@ -228,6 +253,33 @@ CommonFunctions --> FileSystem : "读取"
 - [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L166)
 - [check-prerequisites.ps1](file://scripts/powershell/check-prerequisites.ps1#L1-L148)
 
+### update-agent-context脚本分析
+`update-agent-context`脚本用于维护AI代理上下文文件，通过解析功能规范并使用项目信息更新代理特定的配置文件。该脚本支持包括Qwen Code和opencode在内的多种AI代理。
+
+```mermaid
+flowchart TD
+Start([开始]) --> ValidateEnv["验证环境"]
+ValidateEnv --> ParsePlan["解析plan.md"]
+ParsePlan --> CheckAgent["检查代理类型"]
+CheckAgent --> CreateOrUpdate["创建或更新代理文件"]
+CreateOrUpdate --> HandleQwen["处理Qwen Code代理"]
+CreateOrUpdate --> HandleOpencode["处理opencode代理"]
+HandleQwen --> UpdateQwen["更新QWEN.md"]
+HandleOpencode --> UpdateOpencode["更新AGENTS.md"]
+UpdateQwen --> Success["成功"]
+UpdateOpencode --> Success
+Success --> End([结束])
+```
+
+**图示来源**
+- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh#L1-L773)
+- [update-agent-context.ps1](file://scripts/powershell/update-agent-context.ps1#L1-L440)
+- [agent-file-template.md](file://templates/agent-file-template.md)
+
+**本节来源**
+- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh#L1-L773) - *新增对Qwen Code和opencode代理的支持*
+- [update-agent-context.ps1](file://scripts/powershell/update-agent-context.ps1#L1-L440) - *新增对Qwen Code和opencode代理的支持*
+
 ## 依赖分析
 Spec-Kit脚本系统的组件之间存在清晰的依赖关系。主脚本依赖于公共函数库来获取项目上下文信息，同时依赖于模板文件来生成标准化的输出。Bash和PowerShell脚本实现之间不存在直接依赖，但它们共享相同的模板和功能逻辑。
 
@@ -236,19 +288,23 @@ graph TD
 CreateFeature[create-new-feature] --> Common[common.sh]
 SetupPlan[setup-plan] --> Common
 CheckPrereq[check-prerequisites] --> Common
+UpdateAgent[update-agent-context] --> Common
 CreateFeaturePS[create-new-feature.ps1] --> CommonPS[common.ps1]
 SetupPlanPS[setup-plan.ps1] --> CommonPS
 CheckPrereqPS[check-prerequisites.ps1] --> CommonPS
+UpdateAgentPS[update-agent-context.ps1] --> CommonPS
 Common --> Git[Git命令]
 CommonPS --> Git
 CreateFeature --> SpecTemplate[spec-template.md]
 SetupPlan --> PlanTemplate[plan-template.md]
 CheckPrereq --> PlanTemplate
 CheckPrereq --> TasksTemplate[tasks-template.md]
+UpdateAgent --> AgentTemplate[agent-file-template.md]
 subgraph "模板依赖"
 SpecTemplate --> Commands[specify.md]
 PlanTemplate --> Commands[plan.md]
 TasksTemplate --> Commands[tasks.md]
+AgentTemplate --> Commands[agent-file-template.md]
 end
 ```
 
@@ -258,6 +314,7 @@ end
 - [spec-template.md](file://templates/spec-template.md)
 - [plan-template.md](file://templates/plan-template.md)
 - [tasks-template.md](file://templates/tasks-template.md)
+- [agent-file-template.md](file://templates/agent-file-template.md)
 
 **本节来源**
 - [common.sh](file://scripts/bash/common.sh#L1-L114)
@@ -269,10 +326,19 @@ Spec-Kit脚本系统的设计考虑了执行效率和资源使用。脚本采用
 ## 故障排除指南
 当使用Spec-Kit脚本系统时，可能会遇到一些常见问题。如果`create-new-feature`脚本无法确定仓库根目录，请确保在正确的目录中执行脚本或检查.git或.specify标记文件的存在。如果`setup-plan`脚本报告分支验证失败，请确认当前分支名称符合`###-feature-name`的命名约定。对于`check-prerequisites`脚本的依赖检查失败，应首先运行`/specify`命令创建功能结构，然后运行`/plan`命令生成实施计划。在非Git仓库中使用脚本时，系统会自动降级到基于文件系统的路径检测，但某些Git相关功能将不可用。
 
+对于`update-agent-context`脚本，如果无法更新Qwen Code或opencode代理文件，请检查以下事项：
+- 确认`QWEN.md`或`AGENTS.md`文件是否存在且可写
+- 验证`plan.md`文件中包含必要的项目元数据
+- 确保代理文件模板`agent-file-template.md`存在且可读
+- 检查脚本是否有足够的权限创建或更新文件
+
 **本节来源**
 - [create-new-feature.sh](file://scripts/bash/create-new-feature.sh#L1-L98)
 - [setup-plan.sh](file://scripts/bash/setup-plan.sh#L1-L61)
 - [check-prerequisites.sh](file://scripts/bash/check-prerequisites.sh#L1-L166)
+- [update-agent-context.sh](file://scripts/bash/update-agent-context.sh#L1-L773) - *新增对Qwen Code和opencode代理的支持*
 
 ## 结论
 Spec-Kit脚本系统通过提供Bash和PowerShell两套实现，成功实现了跨平台的自动化任务执行。系统设计体现了模块化、可维护性和用户友好的原则。核心脚本`create-new-feature`、`setup-plan`和`check-prerequisites`构成了开发流程的骨架，通过与模板文件的协同工作，实现了从功能创建到计划设置再到依赖验证的完整自动化。公共函数库的设计避免了代码重复，提高了系统的可维护性。对于希望扩展或修改自动化流程的高级用户，建议遵循现有的编码规范，保持JSON输出模式的一致性，并在修改公共函数时充分考虑对所有依赖脚本的影响。
+
+特别地，`update-agent-context`脚本的更新增加了对Qwen Code和opencode代理的支持，扩展了系统的AI代理兼容性。这一更新通过在脚本中添加新的文件路径和处理逻辑来实现，确保了对这些新兴AI工具的无缝集成。
